android maps düzenlendi
